began formatting tagline

--- a/assets/style.css
+++ b/assets/style.css
@@ -9,7 +9,7 @@ html{
 
 .hero{
     position: relative;
-    height: 400px;
+    height: 230px;
     overflow: hidden;
     background: url("../images/bg-glacier.jpeg") center no-repeat;
     background-image: center no-repeat;
@@ -70,6 +70,13 @@ html{
 .hide{
     display:none;
 }
+
+#map{
+    justify-content: right;
+    margin: auto;
+    margin-right: 60px;
+}
+
 
 /*  adding and removing class in JS -
 $('#className').classList.add('hide')
