--- a/assets/style.css
+++ b/assets/style.css
@@ -86,6 +86,18 @@ html{
     display: inline-flex;
   }
 
+  @media screen and (max-width: 1279px) {
+    .my-element {
+        
+    }
+  }
+  
+  @media screen and (min-width: 1280px) {
+    .my-element {
+
+    }
+  }
+
 /*  adding and removing class in JS -
 $('#className').classList.add('hide')
 $('#className').classList.remove('hide') */
