formatting data boxes

--- a/assets/style.css
+++ b/assets/style.css
@@ -82,7 +82,7 @@ html{
 }
 
 .forecast{
-    background-color: #343734;
+    background-color: #34373474;
     border-radius: 5px;
     color: white;
     margin: 15px;
