--- a/assets/style.css
+++ b/assets/style.css
@@ -90,3 +90,12 @@ html{
     display: inline-flex;
   }
 
+#parkdata, #parkinfo, #thingstodo, #contactinfo, #forecast-container{
+    border-radius: 15px;
+    Box-shadow:0 10px 20px rgba(208, 189, 189, 0.12), 0 6px 6px rgba(123, 118, 118, 0.12);
+    margin-bottom: 20px;
+}
+
+img{
+    border-radius:15px;
+}
