--- a/assets/style.css
+++ b/assets/style.css
@@ -7,6 +7,7 @@ html{
     font-family: system-ui;
 }
 
+/* header image */
 .hero{
     position: relative;
     height: 230px;
@@ -16,6 +17,7 @@ html{
     background-size: cover;
 }
 
+/* header formatted */
 .container{
     position: absolute;
     top: 50%;
@@ -48,6 +50,7 @@ html{
     color: white;
 }
 
+/* header links formatted */
 .resources,
 .contributors{
     padding: 5px;
@@ -63,6 +66,7 @@ html{
 
 }
 
+/* hover effect for header links */
 .resources:hover,
 .contributors:hover{
     text-decoration: none;
@@ -72,6 +76,7 @@ html{
     transform: scale(2.2);
 }
 
+/* hides park data before click */
 .hide{
     display:none;
 }
