--- a/assets/style.css
+++ b/assets/style.css
@@ -12,7 +12,7 @@ html{
     position: relative;
     height: 230px;
     overflow: hidden;
-    background: url("../images/bg-glacier.jpeg") center no-repeat;
+    background: url("../assets/images/bg-glacier.jpeg") center no-repeat;
     background-image: center no-repeat;
     background-size: cover;
 }
